add script fix